fixed bug in constraint 8, goal programming now working also

--- a/examples/large-scale/parameters.ini
+++ b/examples/large-scale/parameters.ini
@@ -8,3 +8,4 @@ hold_post_duration = 1.0
 hold_duration_min = 12.0
 hold_duration_max = 60.0
 minimum_fill_ratio = 0.27
+maximum_prep_utilisation = 0.7
